fix: Re-align pronouns centrally in the small card

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -913,7 +913,8 @@ button:hover,
   font-size: 1rem;
 }
 
-.profile-card .label-badges {
+.profile-card .label-badges,
+.profile-card .pronouns {
   justify-content: center;
 }
 
